--- a/main.html
+++ b/main.html
@@ -10,6 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<header>Avengers</header>
+<nav>
+	<ul>
+		<li><a href="#" id="nav-actor">Actors</a></li>
+		<li><a href="#" id="nav-quote">Quotes</a></li>
+	</ul>
+</nav>
+<summary>gsdfhhdgfryerhrgfyh</summary>
+<aside>hgfhhdgfygfy</aside>
+<section id="actor">ertewtger</section>
+<section id="quote">dfgdfg</section>
+<footer>Produced by: &lt name &gt</footer>
 
 </body>
 
