--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 <header>Avengers</header>
 <nav>
 	<ul>
-		<li><a href="#" id="nav-actor">Actors</a></li>
-		<li><a href="#" id="nav-quote">Quotes</a></li>
+		<li><a href="#actor" id="nav-actor">Actors</a></li>
+		<li><a href="#quote" id="nav-quote">Quotes</a></li>
 	</ul>
 </nav>
 <summary>gsdfhhdgfryerhrgfyh</summary>
