--- a/main.html
+++ b/main.html
@@ -14,8 +14,11 @@
 <nav>
 	<ul>
 		<li><a href="#actor" id="nav-actor">Actors</a></li>
-		<li><a href="#quote" id="nav-quote">Quotes</a></li>
 	</ul>
+</nav>
+<nav>
+	<ul><li><a href="#quote" id="nav-quote">Quotes</a></li></ul>
+
 </nav>
 <summary>gsdfhhdgfryerhrgfyh</summary>
 <aside>hgfhhdgfygfy</aside>
